# dn-resume-lenss

./: .env.example  .gitignore  Dockerfile  Dockerfile.distroless  README.md  cache.py  config.py  deploy-local-docker-run.bat  evaluator.py  extractor.py  main.py  models.py  privacy.py  pyproject.toml  ranker.py  requirements.txt  utils.py
docs/: gen-ai-MIGRATION.md
sample_test_inputs/: JD.md  Yashashwy_Alok_Resume 2.docx  data_science_jd.md
static/: index.html
